# r5tu

./: Cargo.toml
.github/workflows/: ci.yml
src/: header.rs  lib.rs  reader.rs  writer.rs
tests/: crc_mismatch.rs  e2e_multi_graphs.rs  e2e_roundtrip_mmap.rs  edge_cases.rs  oxigraph_conv.rs  roundtrip.rs  roundtrip_zstd.rs  stream_writer.rs
